tree-sitter-daslang/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $._declaration,
      // Statement types allowed at top level for ast-grep pattern matching.
      // Excludes variable_declaration_statement, typedef_statement, and
      // expression_statement to avoid ambiguity with top-level declarations.
      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.with_statement,
      $.unsafe_block,
      $.try_recover_statement,
      $.return_statement,
      $.yield_statement,
      $.break_statement,
      $.continue_statement,
      $.delete_statement,
      $.assume_statement,
      $.label_statement,
      $.goto_statement,
      $.pass_statement,
      $.reader_macro,
    ),

    annotation_list: $ => seq(
      '[',
      sep1($.annotation_declaration, choice(',', '&&', '||', '^^')),
      ']',
    ),

    annotation_declaration: $ => seq(
      optional(choice(
        seq('|', '>'),  // inherited annotation
        '!',
      )),
      field('name', $.annotation_name),
      optional(seq('(', $.annotation_argument_list, ')')),
    ),

    annotation_name: $ => choice(
      $._name_in_namespace,
      'require',
      'private',
      'template',
    ),

    annotation_argument_list: $ => sep1($.annotation_argument, ','),

    annotation_argument: $ => seq(
      field('name', $._annotation_argument_name),
      optional(seq('=', field('value', $._annotation_argument_value))),
    ),

    _annotation_argument_name: $ => choice(
      $.identifier,
      'type',
      'in',
      'default',
    ),

    _annotation_argument_value: $ => choice(
      $.string_literal,
      $.identifier,
      $._annotation_number,
      seq('-', $._annotation_number),
      'true',
      'false',
      seq('@@', $.identifier),  // function pointer value (e.g., @@hash)
      seq('(', sep1($._annotation_argument_value, ','), ')'),
    ),

    // Metadata annotations on fields: @name = value
    function_declaration: $ => seq(
      optional($.annotation_list),
      'def',
      optional('template'),
      optional(choice('public', 'private')),
      field('name', $.function_name),
      optional($.function_argument_list),
      optional($.function_return_type),
      $._function_body,
    ),

    // single-expression arrow body ( => expr / => <- expr ) or a brace block
    _function_body: $ => choice(
      field('body', $.block),
      seq('=>', optional('<-'), field('body', $._expression)),
    ),

    structure_declaration: $ => seq(
      optional($.annotation_list),
      field('kind', choice(
        'struct',
        'class',
        seq('struct', 'template'),
        seq('class', 'template'),
      )),
      optional(choice('public', 'private')),
      optional('sealed'),
      field('name', $.identifier),
      optional(seq(':', field('parent', $._name_in_namespace))),
      '{',
      repeat($.structure_member),
      '}',
      optional(';'),
    ),

    _expression: $ => choice(
      $._name_in_namespace,
      $._literal,
      $.parenthesized_expression,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.null_coalescing_expression,
      $.range_expression,
      $.tuple_expression,
      $.is_expression,
      $.as_expression,
      $.call_expression,
      $.struct_constructor,
      $.method_call_expression,
      $.arrow_call_expression,
      $.pipe_expression,
      $.field_expression,
      $.safe_field_expression,
      $.index_expression,
      $.safe_index_expression,
      $.deref_expression,
      $.addr_expression,
      $.cast_expression,
      $.typeinfo_expression,
      $.type_expression,
      $.new_expression,
      $.func_addr_expression,
      $.block_expression,
      $.lambda_expression,
      $.generator_expression,
      $.array_literal,
      $.table_literal,
      $.array_comprehension,
      $.table_comprehension,
      $.fixed_array_expression,
      $.array_constructor,
      $.table_constructor,
      $.tuple_constructor,
      $.struct_make_expression,
      $.default_expression,
      $.unsafe_expression,
      $.postfix_expression,
      $.call_with_block_expression,
      $.oneliner_if_expression,
      $.reader_macro,
      $.basic_type,  // basic types can appear as expressions (e.g., x |> float)
      $.quote_expression,
      $.uninitialized_expression,
      $.bypass_index_expression,
      $.spread_expression,
      $.array_struct_expression,
      $.variant_constructor,
    ),

    block_expression: $ => seq(
      '$',
      optional($.annotation_list),
      optional($.capture_list),
      optional($.function_argument_list),
      optional($.function_return_type),
      choice(
        field('body', $.block),
        seq('=>', field('body', $._expression)),
      ),
    ),

    _type: $ => choice(
      $.basic_type,
      $.named_type,
      $.auto_type,
      $.pointer_type,
      $.smart_pointer_type,
      $.array_type,
      $.table_type,
      $.iterator_type,
      $.block_type,
      $.function_type,
      $.lambda_type,
      $.tuple_type,
      $.variant_type,
      $.bitfield_type,
      $.typedecl_type,
      $.type_witness,      // type<T> — type-witness form (e.g. `t : type<auto(T)>`)
      $.option_type,
      $._type_modifier,
      $.quote_type,        // $t(type) in macro quotes
      $.type_macro,        // padded(type<T>, N) — type macros
      $.template_type,     // $TName<type;type> — template struct instantiation
    ),

    basic_type: $ => choice(...basic_types),

    type_macro: $ => seq(
      field('name', $.identifier),
      '(',
      sep1(choice($._type_macro_arg), ','),
      ')',
    ),

    _type_macro_arg: $ => choice(
      $.type_witness,
      $._expression,
    ),

    // type<T> as a TYPE (e.g. `t : type<auto(T)>` parameter, return type, struct field).
    // Distinct node from type_expression (same shape, expression-context use only).
    // Matches bison: type_declaration_no_options_no_dim → DAS_TYPE '<' type_declaration '>'.
    auto_type: $ => prec.left(seq(
      'auto',
      optional(seq('(', $.identifier, ')')),
    )),

    pointer_type: $ => prec.left(seq(
      $._type,
      choice('?', '??'),
    )),

    smart_pointer_type: $ => seq(
      'smart_ptr',
      '<',
      $._type,
      '>',
    ),

    array_type: $ => seq(
      'array',
      '<',
      $._type,
      '>',
    ),

    table_type: $ => seq(
      'table',
      '<',
      $._type,
      optional(seq(choice(',', ';'), $._type)),
      '>',
    ),

    iterator_type: $ => seq(
      'iterator',
      '<',
      $._type,
      '>',
    ),

    block_type: $ => choice(
      'block',
      seq('block', '<', choice(
        $._type,
        seq(optional($.function_argument_list), optional($.function_return_type)),
      ), '>'),
    ),

    function_type: $ => choice(
      'function',
      seq('function', '<', choice(
        $._type,
        seq(optional($.function_argument_list), optional($.function_return_type)),
      ), '>'),
    ),

    lambda_type: $ => choice(
      'lambda',
      seq('lambda', '<', choice(
        $._type,
        seq(optional($.function_argument_list), optional($.function_return_type)),
      ), '>'),
    ),

    tuple_type: $ => seq(
      'tuple',
      '<',
      sep1(choice(
        seq($.identifier, ':', $._type),  // named: tuple<x : int; y : float>
        $._type,                           // unnamed: tuple<int; float>
      ), choice(',', ';')),
      '>',
    ),

    variant_type: $ => seq(
      'variant',
      '<',
      sep1(seq($.identifier, ':', $._type), choice(',', ';')),
      '>',
    ),

    bitfield_type: $ => seq(
      'bitfield',
      optional(seq(':', choice('uint8', 'uint16', 'uint', 'uint64'))),
      '<',
      optional(sep1($.identifier, choice(',', ';'))),
      '>',
    ),

    typedecl_type: $ => seq(
      'typedecl',
      '(',
      $._expression,
      ')',
    ),

    option_type: $ => prec.left(seq(
      $._type,
      '|',
      choice($._type, '#'),
    )),

    // Type modifiers (postfix)
    integer_literal: $ => token(choice(
      // Hex with suffix
      seq(/0[xX][0-9a-fA-F][0-9a-fA-F_]*/, optional(choice(
        /[uU][lL]/, /[lL]/, /[uU]8/, /[uU]/,
      ))),
      // Decimal with suffix
      seq(/[0-9][0-9_]*/, optional(choice(
        /[uU][lL]/, /[lL]/, /[uU]8/, /[uU]/,
      ))),
    )),

    // Float literals: 3.14, 3.14f, 3.14d, 3.14lf, 1e10, 1.5e-3, .5
    identifier: $ => /[#a-zA-Z_][a-zA-Z0-9_`]*/,

    _name_in_namespace: $ => choice(
      $.identifier,
      $.scoped_identifier,
    ),
